test/errors/typecheck/no_return.ty
foo := func(n: number) -> number {
	n = n + 1
}